# legal-iptv

./: .gitignore  README.md  action.yml  playlist.m3u  playlist.meta.json  pyproject.toml
.github/workflows/: update-list.yml  update-playlist.yml
legal-iptv/: data.py
legal_iptv/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
legal_iptv/checkers/: m3u8_checker.py
legal_iptv/clients/: __init__.py  http_client.py
legal_iptv/converters/: m3u_converter.py
legal_iptv/exporters/: __init__.py  m3u.py
legal_iptv/io/: __init__.py  json_store.py
legal_iptv/models/: __init__.py  categories.py  channel.py  run_meta.py
legal_iptv/resources/: epg_aliases.json  extra_channels.json
legal_iptv/services/: __init__.py  aggregate.py  category_mapper.py  channel_selector.py  epg_mapper.py  epg_sources.py  extra_channels_service.py  iptv_org_service.py  link_validator.py  metadata.py  youtube_channels_service.py
legal_iptv/sources/: __init__.py  extra_channels.py  iptv_org.py  live_stream_catalog.py
tests/unit/: test_aggregate.py  test_channel_selector.py  test_cli.py  test_epg_mapper.py  test_extra_channels_source.py  test_http_client.py  test_iptv_org_source.py  test_link_validator.py  test_live_stream_catalog_source.py  test_m3u_exporter.py  test_metadata.py
